syntax = "proto3";

package ProductsPackage;

service ProductsService {
    rpc getAllProducts(Empty) returns (Products) {}
    rpc getProductById(ProductId) returns (Product) {}
    
    rpc createProduct(Product) returns (Product) {}
    rpc updateProduct(UpdateProduct) returns (Product) {}
    rpc deleteProduct(ProductId) returns (Product) {}
}

service ReviewsService {
    rpc getAllReviews (Empty) returns (Reviews) {}
    rpc getReviewById (ReviewId) returns (Review) {}
    rpc getProductsReviews(ProductId) returns (ProductsReviews) {}
    rpc getUserReviews (UserId) returns (UserReviews) {}

    rpc createReview (Review) returns (Review) {}
    rpc updateReview (UpdateReview) returns (Review) {}
    rpc deleteReview (ReviewId) returns (Review) {}
}

message Empty {}

message Product {
  string id = 1;
  string name = 2;
  string modelType = 3;
  string family = 4;
  string brand = 5;
  int32 price = 6;
  int32 stock = 7;
  bool disabled = 8;
  string type = 9;
  string description = 10;
  string mainImage = 11;
  repeated string images = 12;
  int32 amount = 13;
}

message Products {
    repeated Product products = 1;
}

message ProductId {
    string productId = 1;
}


message UpdateProduct {
    string productId = 1;
    Product product = 2;
}

message Review {
    string id = 1;
    string title = 2;
    string comment = 3;
    int32 rating = 4;
    string productId = 5;
    string userId = 6;
}

message UpdateReview {
    string userId = 1;
    Review updateReview = 2; 
}

message ReviewId {
    string reviewId = 1;
}

message Reviews {
    repeated Review reviews = 1;
}

message UserId {
    string userId = 1;
}

message ProductsReviews {
    Product product = 1;
    repeated Review Reviews = 2;
}

message UserReview {
    Review userReviews = 1;
    Product userProduct = 2;
}

message UserReviews {
    repeated UserReview userReviews = 1;
}